fix bad z-index + zoom + bug zoom console

--- a/srcs/app_django/pages/static/pages/css/index.css
+++ b/srcs/app_django/pages/static/pages/css/index.css
@@ -314,7 +314,8 @@ input[type="submit"]:hover {
 
 /* GAME SESSION / MENUPONG */
 #menuPongDiv {
-position: absolute;
+	z-index: 2;
+	position: absolute;
 	opacity: 0;
 	visibility: hidden;
 	transition: opacity 1s ease-out;
